# Resonance-Engine

./: .gitignore  Bundle Contract.txt  CLAUDE_CODE_QUICKSTART.md  Implementation Roadmap.txt  LICENSE  MANIFEST.json  NULLS.md  PREREG.yaml  README.md  constraint_health_history.csv  enforce_bundle_contract.py  enforce_gates.yml  organize_repos.py  pyproject.toml  requirements.txt  validate_bundle_0001.sh  validate_bundle_0001.yml
.github/workflows/: tests.yml
bundles/: README.md
bundles/0001_rfo_ringing_wedge/: CLAIM.md  COHERENCE_METRICS.yaml  DEVELOPER_NOTES.md  OPERATIONALIZE.md  README.md  decision_trace.md  dissent_history.csv  hard_gate_results.json  parameters_used.json  seed_manifest.json
core/: __init__.py  __main__.py  coherence_controller.py  discovery_compiler.py
core/integrations/: __init__.py  gp_adapter.py  itpu_adapter.py  justasking_adapter.py
core/metrics/: __init__.py  constraint_health.py  convergence.py  dissent.py  null_gate.py
core/roles/: __init__.py  auditor.py  builder.py  operator.py  skeptic.py
docs/: ARCHITECTURE.md  INTEGRATIONS.md  METRICS.md  PHILOSOPHY.md
docs/setup/: CLAUDE_CODE_CHEATSHEET.md  INDEX.md  README.md  setup_resonance_engine.md
examples/golden_path_toy/: CLAIM.md  NULLS.md  (+5 more)
infrastructure/: README.md
standards/: README.md
templates/: CLAIM.template.md  COHERENCE_METRICS.template.yaml  DISSENT.template.md  NULLS.template.md  OPERATIONALIZE.template.md  PREREG.template.yaml
tests/: test_adapters_exist.py  test_bundle_generation.py  test_imports_smoke.py  test_justasking_adapter.py  test_null_gate.py
(+11 files in other folders)
